@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Add support for exporting and importing headers
 
 0.011     2024-08-11 23:19:50+02:00 Europe/Brussels
           - Let get_config modify build stage arguments
